# 1rpc-lite

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.json  config-demo-example.json  config-demo.json  config-relay-example.json
.github/workflows/: build.yaml  reproducible_build.yaml
scripts/: 1rpc.sh  executor.sh  onerpc.sh
src/apps/1rpc/: Cargo.toml
src/apps/1rpc/src/: app.rs  handler.rs  lib.rs  one_rpc.rs  types.rs
src/apps/onerpc/: Cargo.toml
src/apps/onerpc/src/: app.rs  handler.rs  one_rpc.rs
src/apps/src/: lib.rs
src/common/forwarder/: Cargo.toml
src/common/forwarder/src/: client.rs  error.rs  jsonrpc_forwarder.rs  lib.rs  sanitizer.rs  sol.rs  types.rs  utils.rs
src/common/sgxlib-ra/src/: ffi.rs
