[package]
name = "app-1rpc"
version = "0.1.0"
authors = [ "Automata Authors" ]
edition = "2021"

[features]
default = ["std"]

std = ["glog/std", "apps/std", "serde/std", "serde_json/std", "jsonrpc/std", "base/std", "net-http/std", "forwarder/std"]
tstd = ["sgxlib/tstd", "glog/tstd", "apps/tstd", "serde/tstd", "serde_json/tstd", "jsonrpc/tstd", "base/tstd", "net-http/tstd", "forwarder/tstd", "sgxlib-ra/tstd"]
sgx = ["sgxlib-ra", "sgxlib-ra/sgx", "sgxlib-ra/dcap"]
dcap = ["sgxlib-ra/dcap"]

[dependencies]
apps = { path = "../", default-features = false }
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
net-http = { git = "https://github.com/automata-network/net-http-rs", default-features = false }
serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde_json = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
jsonrpc = { git = "https://github.com/automata-network/jsonrpc-rs", default-features = false }
sgxlib-ra = { git = "https://github.com/automata-network/sgxlib-ra", default-features = false, optional = true }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }

forwarder = { path = "../../common/forwarder", default-features = false }
