[package]
name = "forwarder"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]
std = ["glog/std", "base/std", "net-http/std", "jsonrpc/std", "serde/std", "serde_json/std", "hex/std", "eth_types/std"]
tstd = ["sgxlib/tstd", "base/tstd", "glog/tstd", "net-http/tstd", "jsonrpc/tstd", "serde/tstd", "serde_json/tstd", "hex/tstd", "eth_types/tstd"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
net-http = { git = "https://github.com/automata-network/net-http-rs", default-features = false }
jsonrpc = { git = "https://github.com/automata-network/jsonrpc-rs", default-features = false }
serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde_json = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
hex = { git = "https://github.com/automata-network/hex-rs", default-features = false }
eth_types = { git = "https://github.com/automata-network/eth-types-rs", default-features = false }
